[gd_scene load_steps=25 format=2]

[ext_resource path="res://GameScenes/Battle/Scripts/Battle.gd" type="Script" id=1]
[ext_resource path="res://GameScenes/Battle/Textures/cardsmat/cardsmat_13.png" type="Texture" id=2]
[ext_resource path="res://GameScenes/Battle/Textures/cardsmat/cardsmat_1.png" type="Texture" id=3]
[ext_resource path="res://GameScenes/Battle/Scripts/Field.gd" type="Script" id=4]
[ext_resource path="res://GameScenes/Battle/Scripts/Player1Cards.gd" type="Script" id=5]
[ext_resource path="res://GameObjects/CardFree/Card.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameScenes/Battle/Scripts/Player2Cards.gd" type="Script" id=7]
[ext_resource path="res://GameScenes/Battle/Scripts/GameLogic/GameLogic.gd" type="Script" id=8]
[ext_resource path="res://Globals/Textures/iconfl01_15.png" type="Texture" id=9]
[ext_resource path="res://GameScenes/Battle/Scripts/GameLogic/SelectionPointer/SelectionPointer.gd" type="Script" id=10]
[ext_resource path="res://GameScenes/Battle/Scripts/GameLogic/SelectionPointer/States/SelectingCard.gd" type="Script" id=11]
[ext_resource path="res://GameScenes/Battle/Scripts/GameLogic/SelectionPointer/States/CardSelected.gd" type="Script" id=12]
[ext_resource path="res://GameScenes/Battle/Scripts/GameLogic/SelectionPointer/States/Idle.gd" type="Script" id=13]
[ext_resource path="res://Globals/Audio/cursor_move.wav" type="AudioStream" id=14]
[ext_resource path="res://GameScenes/Battle/Audio/sound-card.wav" type="AudioStream" id=15]
[ext_resource path="res://Globals/Audio/sound-back.wav" type="AudioStream" id=16]
[ext_resource path="res://Globals/Audio/sound-invalid.wav" type="AudioStream" id=17]
[ext_resource path="res://GameScenes/Battle/Scripts/Scores.gd" type="Script" id=18]
[ext_resource path="res://Globals/Textures/cardstext_13-edit.png" type="Texture" id=19]
[ext_resource path="res://GameScenes/Battle/Scripts/ScoreTexture.gd" type="Script" id=20]
[ext_resource path="res://GameScenes/Battle/Audio/Shuffle or Boogie.wav" type="AudioStream" id=21]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 828, 0, 196, 113 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 190, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 190, 100, 100 )

[node name="Battle" type="Control"]
rect_pivot_offset = Vector2( 2530, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 64.0, 832.0 ],
"_edit_lock_": true,
"_edit_vertical_guides_": [ 384.0, 1152.0 ]
}

[node name="BackroundTextures" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CardsmatLeft" type="TextureRect" parent="BackroundTextures"]
margin_right = 1024.0
margin_bottom = 1024.0
texture = ExtResource( 2 )

[node name="CardsmatRight" type="TextureRect" parent="BackroundTextures"]
margin_left = 1024.0
margin_right = 1536.0
margin_bottom = 1024.0
texture = ExtResource( 3 )

[node name="Field" type="GridContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 384.0
margin_top = 64.0
margin_right = 1152.0
margin_bottom = 822.0
size_flags_vertical = 0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Container1" type="Control" parent="Field"]
margin_right = 245.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container2" type="Control" parent="Field"]
margin_left = 261.0
margin_right = 506.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container3" type="Control" parent="Field"]
margin_left = 522.0
margin_right = 767.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container4" type="Control" parent="Field"]
margin_top = 258.0
margin_right = 245.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container5" type="Control" parent="Field"]
margin_left = 261.0
margin_top = 258.0
margin_right = 506.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container6" type="Control" parent="Field"]
margin_left = 522.0
margin_top = 258.0
margin_right = 767.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container7" type="Control" parent="Field"]
margin_top = 516.0
margin_right = 245.0
margin_bottom = 758.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container8" type="Control" parent="Field"]
margin_left = 261.0
margin_top = 516.0
margin_right = 506.0
margin_bottom = 758.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container9" type="Control" parent="Field"]
margin_left = 522.0
margin_top = 516.0
margin_right = 767.0
margin_bottom = 758.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1Cards" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 64.0
margin_right = 288.0
margin_bottom = 960.0
custom_constants/separation = -250
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Container0" type="Control" parent="Player1Cards"]
margin_right = 238.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player1Cards/Container0" instance=ExtResource( 6 )]

[node name="Container1" type="Control" parent="Player1Cards"]
margin_top = 129.0
margin_right = 238.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player1Cards/Container1" instance=ExtResource( 6 )]

[node name="Container2" type="Control" parent="Player1Cards"]
margin_top = 258.0
margin_right = 238.0
margin_bottom = 637.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player1Cards/Container2" instance=ExtResource( 6 )]

[node name="Container3" type="Control" parent="Player1Cards"]
margin_top = 387.0
margin_right = 238.0
margin_bottom = 766.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player1Cards/Container3" instance=ExtResource( 6 )]

[node name="Container4" type="Control" parent="Player1Cards"]
margin_top = 516.0
margin_right = 238.0
margin_bottom = 896.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player1Cards/Container4" instance=ExtResource( 6 )]

[node name="Tween" type="Tween" parent="Player1Cards"]

[node name="Player2Cards" type="VBoxContainer" parent="."]
margin_left = 1246.0
margin_top = 64.0
margin_right = 1484.0
margin_bottom = 960.0
custom_constants/separation = -250
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
field_path = NodePath("../Field")

[node name="Container0" type="Control" parent="Player2Cards"]
margin_right = 238.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player2Cards/Container0" instance=ExtResource( 6 )]
owned_by_player = false

[node name="Container1" type="Control" parent="Player2Cards"]
margin_top = 129.0
margin_right = 238.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player2Cards/Container1" instance=ExtResource( 6 )]
owned_by_player = false

[node name="Container2" type="Control" parent="Player2Cards"]
margin_top = 258.0
margin_right = 238.0
margin_bottom = 637.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player2Cards/Container2" instance=ExtResource( 6 )]
owned_by_player = false

[node name="Container3" type="Control" parent="Player2Cards"]
margin_top = 387.0
margin_right = 238.0
margin_bottom = 766.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player2Cards/Container3" instance=ExtResource( 6 )]
owned_by_player = false

[node name="Container4" type="Control" parent="Player2Cards"]
margin_top = 516.0
margin_right = 238.0
margin_bottom = 896.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="Player2Cards/Container4" instance=ExtResource( 6 )]
owned_by_player = false

[node name="Tween" type="Tween" parent="Player2Cards"]

[node name="GameLogic" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 8 )
field_path = NodePath("../Field")

[node name="SelectionPointer" type="TextureRect" parent="GameLogic"]
margin_left = 443.0
margin_top = 148.0
margin_right = 639.0
margin_bottom = 261.0
rect_scale = Vector2( -0.5, 0.5 )
texture = SubResource( 1 )
script = ExtResource( 10 )

[node name="State" type="Node" parent="GameLogic/SelectionPointer"]

[node name="SelectingCard" type="Node" parent="GameLogic/SelectionPointer/State"]
script = ExtResource( 11 )
cards_container_node_path = NodePath("../../../../Player1Cards")

[node name="CardSelected" type="Node" parent="GameLogic/SelectionPointer/State"]
script = ExtResource( 12 )
field_selection_pointer_path = NodePath("../../../FieldSelectionPointer")
player_cards_path = NodePath("../../../../Player1Cards")
field_path = NodePath("../../../../Field")

[node name="Idle" type="Node" parent="GameLogic/SelectionPointer/State"]
script = ExtResource( 13 )

[node name="Audio" type="Node" parent="GameLogic/SelectionPointer"]
editor/display_folded = true

[node name="CursorMove" type="AudioStreamPlayer" parent="GameLogic/SelectionPointer/Audio"]
stream = ExtResource( 14 )

[node name="CardMove" type="AudioStreamPlayer" parent="GameLogic/SelectionPointer/Audio"]
stream = ExtResource( 15 )

[node name="Cancel" type="AudioStreamPlayer" parent="GameLogic/SelectionPointer/Audio"]
stream = ExtResource( 16 )

[node name="Invalid" type="AudioStreamPlayer" parent="GameLogic/SelectionPointer/Audio"]
stream = ExtResource( 17 )

[node name="FieldSelectionPointer" type="TextureRect" parent="GameLogic"]
visible = false
margin_left = 656.0
margin_top = 448.0
margin_right = 852.0
margin_bottom = 561.0
rect_scale = Vector2( 0.5, 0.5 )
texture = SubResource( 1 )

[node name="Scores" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )

[node name="Player1Score" type="TextureRect" parent="Scores"]
margin_left = 112.0
margin_top = 768.0
margin_right = 224.0
margin_bottom = 880.0
texture = SubResource( 2 )
expand = true
script = ExtResource( 20 )

[node name="Player2Score" type="TextureRect" parent="Scores"]
margin_left = 1312.0
margin_top = 768.0
margin_right = 1432.0
margin_bottom = 880.0
texture = SubResource( 3 )
expand = true
script = ExtResource( 20 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
autoplay = true

[connection signal="match_ended" from="Field" to="." method="_on_Field_match_ended"]
[connection signal="turn_finished" from="Player2Cards" to="GameLogic/SelectionPointer" method="_on_Player2Cards_turn_finished"]
[connection signal="turn_finished" from="Player2Cards" to="GameLogic" method="_on_Player2Cards_turn_finished"]
[connection signal="player_captured_a_card" from="GameLogic" to="Scores" method="_on_GameLogic_player_captured_a_card"]
[connection signal="card_selected" from="GameLogic/SelectionPointer/State/SelectingCard" to="GameLogic/SelectionPointer" method="_on_SelectingCard_card_selected"]
[connection signal="new_card_pointed" from="GameLogic/SelectionPointer/State/SelectingCard" to="Player1Cards" method="_on_SelectingCard_new_card_pointed"]
[connection signal="change_to_idle_state" from="GameLogic/SelectionPointer/State/CardSelected" to="GameLogic/SelectionPointer" method="_on_CardSelected_change_to_idle_state"]
[connection signal="place_card" from="GameLogic/SelectionPointer/State/CardSelected" to="Player1Cards" method="_on_CardSelected_place_card"]
[connection signal="place_card" from="GameLogic/SelectionPointer/State/CardSelected" to="Player2Cards" method="_on_CardSelected_place_card"]
[connection signal="place_card" from="GameLogic/SelectionPointer/State/CardSelected" to="GameLogic" method="_on_CardSelected_place_card"]
[connection signal="return_to_card_selection" from="GameLogic/SelectionPointer/State/CardSelected" to="GameLogic/SelectionPointer" method="_on_CardSelected_return_to_card_selection"]
